--- a/.github/workflows/latest_import.yml
+++ b/.github/workflows/latest_import.yml
@@ -5,6 +5,8 @@ on:
     - cron: '0 4 * * 1'  # Run at 04:00 UTC every Monday
   workflow_dispatch:
 
+name: Late importers report
+
 jobs:
   late-importers:
     name: Build
@@ -22,10 +24,6 @@ jobs:
             : # Do nothing on failure, but suppress errors
         fi
 
-    # The Hoskinson runners may not have jq installed, so do that now.
-    - name: 'Setup jq'
-      uses: dcarbone/install-jq-action@v2.1.0
-
     - name: install elan
       run: |
         set -o pipefail
@@ -34,8 +32,6 @@ jobs:
         echo "$HOME/.elan/bin" >> "${GITHUB_PATH}"
 
     - uses: actions/checkout@v4
-      with:
-        ref: 'master'
 
     - name: If using a lean-pr-release toolchain, uninstall
       run: |
@@ -52,14 +48,20 @@ jobs:
     - name: add minImport linter option
       run: |
         # set `linter.minImport option` to true in `lakefile`
-        sed -i '/⟨'\`'linter.style.missingEnd, true⟩,/{s=^=  ⟨`linter.minImports, true⟩,\n=}' lakefile.lean
+        sed -i -- '/^  -- '\`'latest_import.yml'\`' uses this comment/{s=^=  ⟨`linter.minImports, true⟩,\n=}' lakefile.lean
+
         # import the `minImport` linter in `Mathlib.Init`
         sed -i -z 's=^=import Mathlib.Tactic.Linter.MinImports\n=' Mathlib/Init.lean
+
         # remove the `Mathlib.Init` import from the `minImport` command to avoid a loop
         sed -i '/import Mathlib.Init/d' Mathlib/Tactic/MinImports.lean
+
         # stage the changes in git so that `git diff` can confirm what changed
         git add -u
-        git diff HEAD #lakefile.lean Mathlib/Init.lean Mathlib/Init.lean Mathlib/Tactic/MinImports.lean
+        git diff HEAD #lakefile.lean Mathlib/Init.lean Mathlib/Tactic/MinImports.lean
+
+        printf $'\n\nRunning a test %slake build` to verify, for instance, the absence of import loops\n' $'`'
+        lake build Mathlib.Init
 
     - name: build mathlib
       id: build
@@ -92,6 +94,9 @@ jobs:
     - name: Zulip report
       id: late_importers
       run: |
+        baseURL='https://github.com/leanprover-community/mathlib4/commit'
+        refCommit=${{ github.sha }}
+
         printf $'summary<<EOF\n%s\nEOF' "$(
           lake build | sed -z 's=\n\n*\([^⚠w]\)= \1=g' |
             awk -F: 'BEGIN{max=0}
@@ -115,7 +120,9 @@ jobs:
                 con++
                 printf("| %s | %s | %s | %s |\n", $2, $3, $5, $6)
             }'
-          )"
+          printf '\n\n---\n\nReference commit [%s](%s)\n' "${refCommit:0:10}"  "${baseURL}/${refCommit}"
+          printf '[Full report](https://github.com/%s/actions/runs/%s)\n' "${{ github.repository }}" "${{ github.run_id }}"
+        )" | tee "$GITHUB_OUTPUT"
 
     - name: Post output to Zulip
       uses: zulip/github-actions-zulip/send-message@v1
