--- a/.github/workflows/latest_import.yml
+++ b/.github/workflows/latest_import.yml
@@ -125,7 +125,9 @@ jobs:
             }
               ((con <= 15) && (10 <= $5+0)) {
                 con++
-                printf("| %s | %s | %s | %s |\n", $2, $3, $5, $6)
+                fileHtml=$2
+                gsub(/\.lean$/, ".html", fileHtml)
+                printf("| [%s](https://leanprover-community.github.io/mathlib4_docs/%s) | %s | %s | %s |\n", $2, fileHtml, $3, $5, $6)
             }'
           printf '\n\n---\n\nReference commit [%s](%s)\n' "${refCommit:0:10}"  "${baseURL}/${refCommit}"
           printf '[Full report](https://github.com/%s/actions/runs/%s)\n' "${{ github.repository }}" "${{ github.run_id }}"
