--- a/.github/workflows/latest_import.yml
+++ b/.github/workflows/latest_import.yml
@@ -76,11 +76,11 @@ jobs:
       with:
         linters: gcc
         run: |
-          lake build
+          lake build Mathlib.Data.Nat.Choose.Basic
 
     - name: Full report
       run: |
-        lake build | sed -z 's=\n\n*\([^⚠w]\)= \1=g' |
+        lake build Mathlib.Data.Nat.Choose.Basic | sed -z 's=\n\n*\([^⚠w]\)= \1=g' |
           awk -F: 'BEGIN{max=0}
             /^⚠/{ print currMax; max=0 }
             (max < $3) {
@@ -105,7 +105,7 @@ jobs:
         refCommit=${{ github.sha }}
 
         printf $'summary<<EOF\n%s\nEOF' "$(
-          lake build | sed -z 's=\n\n*\([^⚠w]\)= \1=g' |
+          lake build Mathlib.Data.Nat.Choose.Basic | sed -z 's=\n\n*\([^⚠w]\)= \1=g' |
             awk -F: 'BEGIN{max=0}
               /^⚠/{ print currMax; max=0 }
               (max < $3) {
