--- a/.github/workflows/latest_import.yml
+++ b/.github/workflows/latest_import.yml
@@ -118,6 +118,7 @@ jobs:
                 con++
                 fileHtml=$2
                 gsub(/\.lean$/, ".html", fileHtml)
+                gsub(/ /, "", fileHtml)
                 printf("| [%s](https://leanprover-community.github.io/mathlib4_docs/%s) | %s | %s | %s |\n", $2, fileHtml, $3, $5, $6)
             }'
           printf '\n\n---\n\nReference commit [%s](%s)\n' "${refCommit:0:10}"  "${baseURL}/${refCommit}"
