no need to post on zulip

--- a/.github/workflows/latest_import.yml
+++ b/.github/workflows/latest_import.yml
@@ -88,13 +88,13 @@ jobs:
       run: |
         printf $'summary<<EOF\n%s\nEOF' "$(./scripts/late_importers.sh "${TOP_MODULE}" 15 10)" | tee "$GITHUB_OUTPUT"
 
-    - name: Post output to Zulip
-      uses: zulip/github-actions-zulip/send-message@v1
-      with:
-        api-key: ${{ secrets.ZULIP_API_KEY }}
-        email: 'github-mathlib4-bot@leanprover.zulipchat.com'
-        organization-url: 'https://leanprover.zulipchat.com'
-        to: 'mathlib4'
-        type: 'stream'
-        topic: Late importers report
-        content: ${{ steps.late_importers.outputs.summary }}
+    #- name: Post output to Zulip
+    #  uses: zulip/github-actions-zulip/send-message@v1
+    #  with:
+    #    api-key: ${{ secrets.ZULIP_API_KEY }}
+    #    email: 'github-mathlib4-bot@leanprover.zulipchat.com'
+    #    organization-url: 'https://leanprover.zulipchat.com'
+    #    to: 'mathlib4'
+    #    type: 'stream'
+    #    topic: Late importers report
+    #    content: ${{ steps.late_importers.outputs.summary }}
