--- a/.github/workflows/latest_import.yml
+++ b/.github/workflows/latest_import.yml
@@ -12,9 +12,6 @@ on:
       - 'staging'
   merge_group:
 
-env:
-  TOP_MODULE: Mathlib.Data.Nat.Choose.Basic
-
 jobs:
   late-importers:
     name: Build
@@ -77,16 +74,16 @@ jobs:
       with:
         linters: gcc
         run: |
-          lake build "$TOP_MODULE"
+          lake build Mathlib.Data.Nat.Choose.Basic
 
     - name: Full report
       run: |
-        ./scripts/late_importers.sh "$TOP_MODULE" 0 0
+        ./scripts/late_importers.sh Mathlib.Data.Nat.Choose.Basic 0 0
 
     - name: Zulip report
       id: late_importers
       run: |
-        printf $'summary<<EOF\n%s\nEOF' "$(./scripts/late_importers.sh "$TOP_MODULE" 15 10)" | tee "$GITHUB_OUTPUT"
+        printf $'summary<<EOF\n%s\nEOF' "$(./scripts/late_importers.sh Mathlib.Data.Nat.Choose.Basic 15 10)" | tee "$GITHUB_OUTPUT"
 
     #- name: Post output to Zulip
     #  uses: zulip/github-actions-zulip/send-message@v1
