--- a/.github/workflows/latest_import.yml
+++ b/.github/workflows/latest_import.yml
@@ -89,10 +89,11 @@ jobs:
 
     - name: downstream imports
       run: |
-        #files="$(
-        printf '%s\n' "${{ steps.late_importers.outputs.summary }}" |
-          sed -n '/\.html/{s=^[^[]*\[\(Mathlib[^]]*\).lean].*=`\1,=p}' | sed -z 's=,\n*$=='
-          #)"
+        files="$(
+          printf '%s\n' "${{ steps.late_importers.outputs.summary }}" |
+            sed -n '/\.html/{s=^[^[]*\[\(Mathlib[^]]*\).lean].*=`\1,=p}' | sed -z 's=,\n*$=='
+          )"
+        sed "s=-- insert module names here=$files=" scripts/downstream_counts.lean
     #- name: Post output to Zulip
     #  uses: zulip/github-actions-zulip/send-message@v1
     #  with:
