--- a/.github/workflows/latest_import.yml
+++ b/.github/workflows/latest_import.yml
@@ -97,7 +97,7 @@ jobs:
         sed -i "s=-- insert module names here=$files=" scripts/downstream_counts.lean
         paste -d' ' <(echo "${{ steps.late_importers.outputs.summary }}") <(
           printf $'Downstream files |\n-: |\n%s' "$(lake env lean scripts/downstream_counts.lean | sed 's=$= |=')") |
-          awk 'BEGIN{FS="|"; OFS="|"} (1 < NF) {print $1, $2, $3, $4, $6, $5, $7} (NF == 0) {print $0}'
+          awk 'BEGIN{FS="|"; OFS="|"} (1 < NF) {print $1, $2, $3, $4, $6, $5, $7} (NF <= 1) {print $0}'
     #- name: Post output to Zulip
     #  uses: zulip/github-actions-zulip/send-message@v1
     #  with:
