--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -7,7 +7,11 @@ on:
 jobs:
   ping_zulip:
     name: Ping maintainers on Zulip
-    if: github.event.issue.pull_request && (startsWith(github.event.comment.body, 'maintainer merge') || contains(toJSON(github.event.comment.body), '\nmaintainer merge'))
+    if: github.event.issue.pull_request &&
+      (startsWith(github.event.comment.body, 'myself merge') ||
+      contains(toJSON(github.event.comment.body), '\nmyself merge')) ||
+      (startsWith(github.event.comment.body, 'myself delegate') ||
+      contains(toJSON(github.event.comment.body), '\nmyself delegate'))
     runs-on: ubuntu-latest
     steps:
       - name: Check whether user is part of mathlib-reviewers team
@@ -31,30 +35,34 @@ jobs:
           PR:  /repos/leanprover-community/mathlib4/issues/${{ github.event.issue.number }}
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-      - name: Send message on Zulip
-        uses: zulip/github-actions-zulip/send-message@v1
-        with:
-          api-key: ${{ secrets.ZULIP_API_KEY }}
-          email: 'github-mathlib4-bot@leanprover.zulipchat.com'
-          organization-url: 'https://leanprover.zulipchat.com'
-          to: 'mathlib reviewers'
-          type: 'stream'
-          topic: ${{ steps.determine_topic.outputs.topic }}
-          content: |
-            ${{ format('{0} requested a maintainer merge from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}
-
-            > ${{ github.event.issue.title }}
-
-      - name: Add comment to PR
-        uses: GrantBirki/comment@v2
-        with:
-          issue-number: ${{ github.event.issue.number }}
-          body: |
-            🚀 Pull request has been placed on the maintainer queue by ${{ github.event.comment.user.login }}.
-      - name: Add label to PR
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const { owner, repo, number: issue_number } = context.issue;
-            await github.rest.issues.addLabels({ owner, repo, issue_number, labels: ['maintainer-merge'] });
+      - name: Form the message
+        id: merge_or_delegate
+        run: |
+          echo "${{ github.event.comment.body }}"
+      #- name: Send message on Zulip
+      #  uses: zulip/github-actions-zulip/send-message@v1
+      #  with:
+      #    api-key: ${{ secrets.ZULIP_API_KEY }}
+      #    email: 'github-mathlib4-bot@leanprover.zulipchat.com'
+      #    organization-url: 'https://leanprover.zulipchat.com'
+      #    to: 'mathlib reviewers'
+      #    type: 'stream'
+      #    topic: ${{ steps.determine_topic.outputs.topic }}
+      #    content: |
+      #      ${{ format('{0} requested a maintainer merge from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}
+#
+      #      > ${{ github.event.issue.title }}
+#
+      #- name: Add comment to PR
+      #  uses: GrantBirki/comment@v2
+      #  with:
+      #    issue-number: ${{ github.event.issue.number }}
+      #    body: |
+      #      🚀 Pull request has been placed on the maintainer queue by ${{ github.event.comment.user.login }}.
+      #- name: Add label to PR
+      #  uses: actions/github-script@v7
+      #  with:
+      #    github-token: ${{secrets.GITHUB_TOKEN}}
+      #    script: |
+      #      const { owner, repo, number: issue_number } = context.issue;
+      #      await github.rest.issues.addLabels({ owner, repo, issue_number, labels: ['maintainer-merge'] });
