--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   ping_zulip:
     name: Ping maintainers on Zulip
-    if: github.event.issue.pull_request &&
+    if: #github.event.issue.pull_request &&
         ((startsWith(github.event.comment.body, 'myself merge') ||
         contains(toJSON(github.event.comment.body), '\nmyself merge')) ||
         (startsWith(github.event.comment.body, 'myself delegate') ||
