--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Add comment to PR
         uses: GrantBirki/comment@v2
         with:
-          issue-number: ${{ github.event.issue.number }}
+          issue-number: 18708 #${{ github.event.issue.number }}
           body: |
             🚀 Pull request has been placed on the maintainer queue by ${{ github.event.comment.user.login }}.
       #- name: Add label to PR
