--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -42,6 +42,8 @@ jobs:
 myself merge' #${{ github.event.pull_request.title }}
         run: |
           echo "${TITLE}"
+          echo "${TITLE}" | grep "^myself"
+          echo "title=${TITLE}" >> "${GITHUB_OUTPUT}"
       #- name: Send message on Zulip
       #  uses: zulip/github-actions-zulip/send-message@v1
       #  with:
@@ -62,6 +64,7 @@ myself merge' #${{ github.event.pull_request.title }}
           issue-number: 18708 #${{ github.event.issue.number }}
           body: |
             🚀 Pull request has been placed on the maintainer queue by ${{ github.event.comment.user.login }}.
+            ${{ steps.merge_or_delegate.outputs.title }}
       #- name: Add label to PR
       #  uses: actions/github-script@v7
       #  with:
