--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -42,7 +42,7 @@ jobs:
 myself merge' #${{ github.event.pull_request.title }}
         run: |
           printf "${TITLE}"
-          printf "${TITLE}" | grep "^myself"
+          printf "${TITLE}" | grep "^myself" || echo "not found"
           printf $'title<<EOF\n%s\nEOF' "${TITLE}" >> "${GITHUB_OUTPUT}"
       #- name: Send message on Zulip
       #  uses: zulip/github-actions-zulip/send-message@v1
