--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -8,10 +8,10 @@ jobs:
   ping_zulip:
     name: Ping maintainers on Zulip
     #if: #github.event.issue.pull_request &&
-    #    ((startsWith(github.event.comment.body, 'myself merge') ||
-    #    contains(toJSON(github.event.comment.body), '\nmyself merge')) ||
-    #    (startsWith(github.event.comment.body, 'myself delegate') ||
-    #    contains(toJSON(github.event.comment.body), '\nmyself delegate')))
+    #    ((startsWith(github.event.comment.body, 'maintainer merge') ||
+    #    contains(toJSON(github.event.comment.body), '\nmaintainer merge')) ||
+    #    (startsWith(github.event.comment.body, 'maintainer delegate') ||
+    #    contains(toJSON(github.event.comment.body), '\nmaintainer delegate')))
     runs-on: ubuntu-latest
     steps:
       - name: Check whether user is part of mathlib-reviewers team
@@ -36,19 +36,19 @@ jobs:
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
       - name: set variable
-        run: printf $'TITLE<<EEE\nthis is free text containing\nmyself delegate\nEEE' >> "$GITHUB_ENV"
+        run: printf $'TITLE<<EEE\nthis is free text containing\nmaintainer delegate\nEEE' >> "$GITHUB_ENV"
 
       - name: Form the message
         id: merge_or_delegate
         #env:
-        #  TITLE: $'this is free text containing\nmyself merge' #${{ github.event.pull_request.title }}
+        #  TITLE: $'this is free text containing\nmaintainer merge' #${{ github.event.pull_request.title }}
         run: |
           printf '%s\n' "${TITLE}"
-          printf '%s\n' "${TITLE}" | grep "^myself merge" || echo "not found"
-          if printf '%s\n' "${TITLE}" | grep "^myself merge"
+          printf '%s\n' "${TITLE}" | grep "^maintainer merge" || echo "not found"
+          if printf '%s\n' "${TITLE}" | grep "^maintainer merge"
           then
             printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer merge from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
-          elif printf '%s\n' "${TITLE}" | grep "^myself delegate"
+          elif printf '%s\n' "${TITLE}" | grep "^maintainer delegate"
           then
             printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer delegate from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
           fi
