--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -47,10 +47,10 @@ jobs:
           printf '%s\n' "${TITLE}" | grep "^maintainer merge" || echo "not found"
           if printf '%s\n' "${TITLE}" | grep "^maintainer merge"
           then
-            printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer merge from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
+            printf $'title<<EOF\n${{ format('{0} requested a maintainer %s from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}\nEOF' "merge" >> "${GITHUB_OUTPUT}"
           elif printf '%s\n' "${TITLE}" | grep "^maintainer delegate"
           then
-            printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer delegate from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
+            printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer delegate from comment on {3} PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url, steps.determine_topic.outputs.topic ) }}" >> "${GITHUB_OUTPUT}"
           fi
       #- name: Send message on Zulip
       #  uses: zulip/github-actions-zulip/send-message@v1
