--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -1,17 +1,17 @@
 name: Maintainer merge (comment)
 
 on:
-  push: #issue_comment:
-    #types: [created, edited]
+  issue_comment:
+    types: [created, edited]
 
 jobs:
   ping_zulip:
     name: Ping maintainers on Zulip
-    #if: #github.event.issue.pull_request &&
-    #    ((startsWith(github.event.comment.body, 'maintainer merge') ||
-    #    contains(toJSON(github.event.comment.body), '\nmaintainer merge')) ||
-    #    (startsWith(github.event.comment.body, 'maintainer delegate') ||
-    #    contains(toJSON(github.event.comment.body), '\nmaintainer delegate')))
+    if: github.event.issue.pull_request &&
+        ((startsWith(github.event.comment.body, 'maintainer merge') ||
+        contains(toJSON(github.event.comment.body), '\nmaintainer merge')) ||
+        (startsWith(github.event.comment.body, 'maintainer delegate') ||
+        contains(toJSON(github.event.comment.body), '\nmaintainer delegate')))
     runs-on: ubuntu-latest
     steps:
       - name: Check whether user is part of mathlib-reviewers team
@@ -27,6 +27,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: master
+
       - name: Determine Zulip topic
         id: determine_topic
         run: |
@@ -40,8 +41,6 @@ jobs:
 
       - name: Form the message
         id: merge_or_delegate
-        #env:
-        #  TITLE: $'this is free text containing\nmaintainer merge' #${{ github.event.pull_request.title }}
         run: |
           printf '%s\n' "${TITLE}"
           printf '%s\n' "${TITLE}" | grep "^maintainer merge" || echo "not found"
@@ -52,31 +51,32 @@ jobs:
           then
             printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer delegate from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
           fi
-      #- name: Send message on Zulip
-      #  uses: zulip/github-actions-zulip/send-message@v1
-      #  with:
-      #    api-key: ${{ secrets.ZULIP_API_KEY }}
-      #    email: 'github-mathlib4-bot@leanprover.zulipchat.com'
-      #    organization-url: 'https://leanprover.zulipchat.com'
-      #    to: 'mathlib reviewers'
-      #    type: 'stream'
-      #    topic: ${{ steps.determine_topic.outputs.topic }}
-      #    content: |
-      #      ${{ format('{0} requested a maintainer merge from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}
 
-      #      > ${{ github.event.issue.title }}
+      - name: Send message on Zulip
+        uses: zulip/github-actions-zulip/send-message@v1
+        with:
+          api-key: ${{ secrets.ZULIP_API_KEY }}
+          email: 'github-mathlib4-bot@leanprover.zulipchat.com'
+          organization-url: 'https://leanprover.zulipchat.com'
+          to: 'mathlib reviewers'
+          type: 'stream'
+          topic: ${{ steps.determine_topic.outputs.topic }}
+          content: |
+            ${{ steps.merge_or_delegate.outputs.title }}
+
+            > ${{ github.event.issue.title }}
 
       - name: Add comment to PR
         uses: GrantBirki/comment@v2
         with:
-          issue-number: 18708 #${{ github.event.issue.number }}
+          issue-number: ${{ github.event.issue.number }}
           body: |
             🚀 Pull request has been placed on the maintainer queue by ${{ github.event.comment.user.login }}.
-            ${{ steps.merge_or_delegate.outputs.title }}
-      #- name: Add label to PR
-      #  uses: actions/github-script@v7
-      #  with:
-      #    github-token: ${{secrets.GITHUB_TOKEN}}
-      #    script: |
-      #      const { owner, repo, number: issue_number } = context.issue;
-      #      await github.rest.issues.addLabels({ owner, repo, issue_number, labels: ['maintainer-merge'] });
+
+      - name: Add label to PR
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            const { owner, repo, number: issue_number } = context.issue;
+            await github.rest.issues.addLabels({ owner, repo, issue_number, labels: ['maintainer-merge'] });
