--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -36,18 +36,13 @@ jobs:
           PR:  /repos/leanprover-community/mathlib4/issues/${{ github.event.issue.number }}
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-      - name: set variable
-        run: printf $'TITLE<<EEE\nthis is free text containing\nmaintainer delegate\nEEE' >> "$GITHUB_ENV"
-
       - name: Form the message
         id: merge_or_delegate
         run: |
-          printf '%s\n' "${TITLE}"
-          printf '%s\n' "${TITLE}" | grep "^maintainer merge" || echo "not found"
-          if printf '%s\n' "${TITLE}" | grep "^maintainer merge"
+          if printf '%s\n' "${{ github.event.comment.body }}" | grep "^maintainer merge"
           then
             printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer merge from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
-          elif printf '%s\n' "${TITLE}" | grep "^maintainer delegate"
+          elif printf '%s\n' "${{ github.event.comment.body }}" | grep "^maintainer delegate"
           then
             printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer delegate from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
           fi
