--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -38,11 +38,13 @@ jobs:
 
       - name: Form the message
         id: merge_or_delegate
+        env:
+          BODY: ${{ github.event.comment.body }}
         run: |
-          if printf '%s\n' "${{ github.event.comment.body }}" | grep "^maintainer merge"
+          if printf '%s\n' "${BODY}" | grep "^maintainer merge"
           then
             printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer merge from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
-          elif printf '%s\n' "${{ github.event.comment.body }}" | grep "^maintainer delegate"
+          elif printf '%s\n' "${BODY}" | grep "^maintainer delegate"
           then
             printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer delegate from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
           fi
