--- a/.github/build.in.yml
+++ b/.github/build.in.yml
@@ -4,6 +4,15 @@
 ### NB: and regenerate those files by manually running
 ### NB: .github/workflows/mk_build_yml.sh
 
+# .github/workflows/bors.yml:308:155: unexpected token "[" while parsing variable access, function call, null, bool, int, float or string. expecting "IDENT", "(", "INTEGER", "FLOAT", "STRING" [expression]
+# .github/workflows/bors.yml:309:9: shellcheck reported issue in this script: SC2086:info:7:16: Double quote to prevent globbing and word splitting [shellcheck]
+# .github/workflows/build.yml:315:155: unexpected token "[" while parsing variable access, function call, null, bool, int, float or string. expecting "IDENT", "(", "INTEGER", "FLOAT", "STRING" [expression]
+# .github/workflows/build.yml:316:9: shellcheck reported issue in this script: SC2086:info:7:16: Double quote to prevent globbing and word splitting [shellcheck]
+# .github/workflows/build_fork.yml:312:155: unexpected token "[" while parsing variable access, function call, null, bool, int, float or string. expecting "IDENT", "(", "INTEGER", "FLOAT", "STRING" [expression]
+# .github/workflows/build_fork.yml:313:9: shellcheck reported issue in this script: SC2086:info:7:16: Double quote to prevent globbing and word splitting [shellcheck]
+# .github/workflows/lean4checker.yml:70:9: shellcheck reported issue in this script: SC2086:info:7:16: Double quote to prevent globbing and word splitting [shellcheck]
+# reviewdog: found at least one issue with severity greater than or equal to the given level: error
+
 jobs:
   # Cancels previous runs of jobs in this file
   cancel:
@@ -301,7 +310,7 @@ jobs:
           cd lean4checker
           # Read lean-toolchain file and checkout appropriate branch
           TOOLCHAIN=$(cat ../lean-toolchain)
-          if [[ $TOOLCHAIN =~ ^leanprover/lean4:v ]]; then
+          if [[ "$TOOLCHAIN" =~ ^leanprover/lean4:v ]]; then
             VERSION=${TOOLCHAIN#leanprover/lean4:}
             git checkout $VERSION
           else
