--- a/.github/workflows/lean4checker.yml
+++ b/.github/workflows/lean4checker.yml
@@ -72,7 +72,7 @@ jobs:
           cd lean4checker
           # Read lean-toolchain file and checkout appropriate branch
           TOOLCHAIN=$(cat ../lean-toolchain)
-          if [[ $TOOLCHAIN =~ ^leanprover/lean4:v ]]; then
+          if [[ "$TOOLCHAIN" =~ ^leanprover/lean4:v ]]; then
             VERSION=${TOOLCHAIN#leanprover/lean4:}
             git checkout $VERSION
           else
