--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -320,7 +320,7 @@ jobs:
           TOOLCHAIN=$(cat ../lean-toolchain)
           if [[ "$TOOLCHAIN" =~ ^leanprover/lean4:v ]]; then
             VERSION=${TOOLCHAIN#leanprover/lean4:}
-            git checkout $VERSION
+            git checkout "$VERSION"
           else
             git checkout master
           fi
