--- a/.github/workflows/maintainer_merge_comment.yml
+++ b/.github/workflows/maintainer_merge_comment.yml
@@ -1,8 +1,8 @@
 name: Maintainer merge (comment)
 
 on:
-  issue_comment:
-    types: [created, edited]
+  pull_request: #issue_comment:
+    types: [opened, edited] #types: [created, edited]
 
 jobs:
   ping_zulip:
@@ -41,27 +41,28 @@ jobs:
         env:
           BODY: ${{ github.event.comment.body }}
         run: |
-          if printf '%s\n' "${BODY}" | grep "^maintainer merge"
-          then
-            printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer merge from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
-          elif printf '%s\n' "${BODY}" | grep "^maintainer delegate"
-          then
-            printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer delegate from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
-          fi
+          ./scripts/maintainer_merge_message.sh "${BODY}" comment >> "${GITHUB_OUTPUT}"
+          #if printf '%s\n' "${BODY}" | grep "^maintainer merge"
+          #then
+          #  printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer merge from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
+          #elif printf '%s\n' "${BODY}" | grep "^maintainer delegate"
+          #then
+          #  printf $'title<<EOF\n%s\nEOF' "${{ format('{0} requested a maintainer delegate from comment on PR [#{1}]({2}):', github.event.comment.user.login, github.event.issue.number, github.event.issue.html_url ) }}" >> "${GITHUB_OUTPUT}"
+          #fi
 
-      - name: Send message on Zulip
-        uses: zulip/github-actions-zulip/send-message@v1
-        with:
-          api-key: ${{ secrets.ZULIP_API_KEY }}
-          email: 'github-mathlib4-bot@leanprover.zulipchat.com'
-          organization-url: 'https://leanprover.zulipchat.com'
-          to: 'mathlib reviewers'
-          type: 'stream'
-          topic: ${{ steps.determine_topic.outputs.topic }}
-          content: |
-            ${{ steps.merge_or_delegate.outputs.title }}
+      #- name: Send message on Zulip
+      #  uses: zulip/github-actions-zulip/send-message@v1
+      #  with:
+      #    api-key: ${{ secrets.ZULIP_API_KEY }}
+      #    email: 'github-mathlib4-bot@leanprover.zulipchat.com'
+      #    organization-url: 'https://leanprover.zulipchat.com'
+      #    to: 'mathlib reviewers'
+      #    type: 'stream'
+      #    topic: ${{ steps.determine_topic.outputs.topic }}
+      #    content: |
+      #      ${{ steps.merge_or_delegate.outputs.title }}
 
-            > ${{ github.event.issue.title }}
+      #      > ${{ github.event.issue.title }}
 
       - name: Add comment to PR
         uses: GrantBirki/comment@v2
@@ -70,10 +71,10 @@ jobs:
           body: |
             🚀 Pull request has been placed on the maintainer queue by ${{ github.event.comment.user.login }}.
 
-      - name: Add label to PR
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const { owner, repo, number: issue_number } = context.issue;
-            await github.rest.issues.addLabels({ owner, repo, issue_number, labels: ['maintainer-merge'] });
+      #- name: Add label to PR
+      #  uses: actions/github-script@v7
+      #  with:
+      #    github-token: ${{secrets.GITHUB_TOKEN}}
+      #    script: |
+      #      const { owner, repo, number: issue_number } = context.issue;
+      #      await github.rest.issues.addLabels({ owner, repo, issue_number, labels: ['maintainer-merge'] });
